--- a/GWorkspace/Resources/English.lproj/Localizable.strings
+++ b/GWorkspace/Resources/English.lproj/Localizable.strings
@@ -1,4 +1,4 @@
-/* ----------------------- menu strings --------------------------- *\
+﻿/* ----------------------- menu strings --------------------------- *\
 /* main.m */
 
 "Info" = "Info";
