--- a/GWorkspace/Resources/Romanian.lproj/Localizable.strings
+++ b/GWorkspace/Resources/Romanian.lproj/Localizable.strings
@@ -1,26 +1,26 @@
-/* ----------------------- menu strings --------------------------- *\
+ï»¿/* ----------------------- menu strings --------------------------- *\
 /* main.m */
 
 "Info" = "Info";
-	"Info Panel..." = "Panou Informaþii...";
-	"Preferences..." = "Preferinþe...";
+	"Info Panel..." = "Panou InformaÃ¾ii...";
+	"Preferences..." = "PreferinÃ¾e...";
 	"Help..." = "Ajutor...";
 
-"File" = "Fiºier";
+"File" = "FiÂºier";
 	"Open" = "Deschide";
 	"Open as Folder" = "Deschide ca Dosar";
-	"Edit File" = "Editeazã Fiºier";
+	"Edit File" = "EditeazÃ£ FiÂºier";
 	"New Folder" = "Nou Dosar";
-	"New File" = "Nou Fiºier";
-	"Duplicate" = "Duplicheazã";	
+	"New File" = "Nou FiÂºier";
+	"Duplicate" = "DuplicheazÃ£";	
 	"Destroy" = "Distruge";
-	"Empty Recycler" = "Goleºte Coºul";
+	"Empty Recycler" = "GoleÂºte CoÂºul";
 
 "Edit" = "Editare";
 	"Cut" = "Taie";
-	"Copy" = "Copiazã";
-	"Paste" = "Lipeºte";
-	"Select All" = "Selecteazã tot";
+	"Copy" = "CopiazÃ£";
+	"Paste" = "LipeÂºte";
+	"Select All" = "SelecteazÃ£ tot";
 		
 "View" = "Vezi ca";
 	"Browser" = "Browser";
@@ -29,33 +29,33 @@
 "Tools" = "Instrumente";
 	"Viewer" = "Viewer";
 	"Inspectors" = "Inspectoare";
-		"Show Inspectors" = "Aratã Inspectoarele";
-		"Attributes" = "Atribuþii";
-		"Contents" = "Conþinut";
+		"Show Inspectors" = "AratÃ£ Inspectoarele";
+		"Attributes" = "AtribuÃ¾ii";
+		"Contents" = "ConÃ¾inut";
 		"Tools" = "Instrumente";	
 		"Permissions" = "Permisii";	
 	"Finder" = "Finder";
 	"Processes..." = "Procese...";
 	"Fiend" = "Fiend";
-		"Show Fiend" = "Aratã Fiend-ul";
+		"Show Fiend" = "AratÃ£ Fiend-ul";
 		"Hide Fiend" = "Ascunde Fiend-ul";
-		"Add Layer..." = "Adaugã un Layer...";
+		"Add Layer..." = "AdaugÃ£ un Layer...";
 		"Remove Current Layer" = "Scoate Layer-ul Curent";
-		"Rename Current Layer" = "Redenumeºte Layer-ul Curent";
+		"Rename Current Layer" = "RedenumeÂºte Layer-ul Curent";
 		"Layers" = "Layers";
 	"DeskTop Shelf" = "DeskTop Shelf";	
 	"XTerm" = "XTerm";
 	
 "Windows" = "Ferestre";
-	"Arrange in Front" = "Adu în faþã";
-	"Miniaturize Window" = "Micºoreazã Fereastra";
-	"Close Window" = "Închide Fereastra";
+	"Arrange in Front" = "Adu Ã®n faÃ¾Ã£";
+	"Miniaturize Window" = "MicÂºoreazÃ£ Fereastra";
+	"Close Window" = "ÃŽnchide Fereastra";
 	
 "Services" = "Servicii";
 
 "Hide" = "Ascunde";
 
-"Quit" = "Ieºi";
+"Quit" = "IeÂºi";
 
 /* ----------------------- File Operations strings --------------------------- *\
 
@@ -67,85 +67,85 @@
 
 "Error" = "Eroare";
 "You have not write permission\nfor" = "Nu ai permisie de scriere\npentru";
-"Continue" = "Continuã";
+"Continue" = "ContinuÃ£";
 
 
 /* FileOperation.m */
 
 "OK" = "OK";
-"Cancel" = "Anuleazã";
-"Move" = "Miºca";
-"Move from: " = "Miºc de la: ";
+"Cancel" = "AnuleazÃ£";
+"Move" = "MiÂºca";
+"Move from: " = "MiÂºc de la: ";
 "\nto: " = "\nla: ";
-"Copy" = "Copiazã";
+"Copy" = "CopiazÃ£";
 "Copy from: " = "Copiez de la: ";
-"Link" = "Leagã";
-"Delete" = "ªterge";
-"Delete the selected objects?" = "ªterg obiectele selectate?";
+"Link" = "LeagÃ£";
+"Delete" = "Âªterge";
+"Delete the selected objects?" = "Âªterg obiectele selectate?";
 "Duplicate" = "Duplica";
 "Duplicate the selected objects?" = "Duplichez obiectele selectate?";
 "From:" = "De la:";
 "To:" = "La:";
-"In:" = "În:";
+"In:" = "ÃŽn:";
 "Stop" = "Stop";
-"Pause" = "Pauzã";
-"Moving" = "Miºc";
+"Pause" = "PauzÃ£";
+"Moving" = "MiÂºc";
 "Copying" = "Copiez";
 "Linking" = "Leg";
 "Duplicating" = "Duplichez";
-"Destroying" = "ªterg";
-"File Operation Completed" = "Operazie Terminatã";
-"Backgrounder connection died!" = "Conexiunea cu Backgrounder-ul a cãzut!";
-"Some items have the same name;\ndo you want to sobstitute them?" = "Anumite elemente au acelaºi nume;\nvrei sã le înlocuieºti?";
+"Destroying" = "Âªterg";
+"File Operation Completed" = "Operazie TerminatÃ£";
+"Backgrounder connection died!" = "Conexiunea cu Backgrounder-ul a cÃ£zut!";
+"Some items have the same name;\ndo you want to sobstitute them?" = "Anumite elemente au acelaÂºi nume;\nvrei sÃ£ le Ã®nlocuieÂºti?";
 "Error" = "Eroare";
-"File Operation Error!" = "Eroare în operaþia pe fiºiere!";
+"File Operation Error!" = "Eroare Ã®n operaÃ¾ia pe fiÂºiere!";
 
 
 /* ColumnIcon.m */
 
 "You have not write permission\nfor " = "Nu ai permisie de scriere\npentru ";
 "The name " = "numele ";
-" is already in use!" = " e deja în uz!";
+" is already in use!" = " e deja Ã®n uz!";
 "Cannot rename " = "Nu pot renumi ";
-"Invalid char in name" = "Caracter invalid în nume";
+"Invalid char in name" = "Caracter invalid Ã®n nume";
 
 
 /* ----------------------- Inspectors strings --------------------------- *\
 
 /* InspectorsWin.m */
 
-"Attributes" = "Atribuþii";
-"Contents" = "Conþinuturi";
+"Attributes" = "AtribuÃ¾ii";
+"Contents" = "ConÃ¾inuturi";
 "Tools" = "Instrumente";
 "Access Control" = "Control Acces";
 
 
 /* AttributesPanel.m */
 
-"Attributes" = "Atribuþii";
-"Attributes Inspector" = "Inspector Atribuþii";
+"Attributes" = "AtribuÃ¾ii";
+"Attributes Inspector" = "Inspector AtribuÃ¾ii";
 "Path:" = "Path:";
 "Link To:" = "Link la:";
 "Size:" = "Dimensiuni:";
 "Owner:" = "Proprietar:";
 "Group:" = "Grup:";
 "Changed" = "Modificat";
-"Revert" = "Anuleazã";
+"Revert" = "AnuleazÃ£";
 "OK" = "OK";
 
 
 /* ContentsPanel.m */
 
 "Contents" = "Contenuti";
-"Contents Inspector" = "Inspector Conþinut";
+"Contents Inspector" = "Inspector ConÃ¾inut";
 "No Contents Inspector" = "Nici un inspector";
-"No Contents Inspector\nFor Multiple Selection" = "Nici un inspector\npentru o selectare multiplã";
+"No Contents Inspector\nFor Multiple Selection" = "Nici un inspector\npentru o selectare multiplÃ£";
 
 
 /* FolderViewer.m */
 
 "Sort method applies to the\ncontents of the selected folder,\nNOT to its parent folder"
-  = "Ordonarea se aplicã\nconþinutului dosarului selectat,\nNU directorului care îl conþine";
+  = "Ordonarea se aplicÃ£\nconÃ¾inutului dosarului selectat,\nNU directorului care Ã®l conÃ¾ine";
 "Sort by" = "Ordonare";
 "Name" = "Nume";
 "Type" = "Tip";
@@ -163,7 +163,7 @@
 /* AppViewer.m */
 
 "Open these kinds of documents:" = "Deschide acest tip de documente:";
-"Invalid Contents" = "Conþinut invalid";
+"Invalid Contents" = "ConÃ¾inut invalid";
 "App Inspector" = "Inspector App";
 
 
@@ -171,7 +171,7 @@
 
 "UNIX Permissions" = "Permisii UNIX";
 "Access Control" = "Control Acces";
-"Also apply to files inside selection" = "Aplicã ºi fiºierelor dinãuntrul selectãrii";
+"Also apply to files inside selection" = "AplicÃ£ Âºi fiÂºierelor dinÃ£untrul selectÃ£rii";
 
 
 /* ToolsPanel.m */
@@ -184,32 +184,32 @@
 
 /* AppsView.m */
 	
-"Double-click to open selected document(s)" = "Douã-click pentru a deschide documentele selectate";	
+"Double-click to open selected document(s)" = "DouÃ£-click pentru a deschide documentele selectate";	
 "Default:" = "Default:";	
 "Path:" = "Path:";
 "Click 'Set Default' to set default application\nfor all documents with this extension" 
-  = "'Set Default' pentru a seta app-ul default\npentru toate documentele cu aceastã extensie";
+  = "'Set Default' pentru a seta app-ul default\npentru toate documentele cu aceastÃ£ extensie";
 
 
 /* PermsBox.m */
 
 "Permissions" = "Permisii";
-"Read" = "Citeºte";
+"Read" = "CiteÂºte";
 "Write" = "Scrie";
-"Execute" = "Executã";
+"Execute" = "ExecutÃ£";
 "Owner" = "Propr.";
 "Group" = "Grup";
-"Other" = "Alþii";
+"Other" = "AlÃ¾ii";
 
 
 /* Recycler strings */
-"Recycle: " = "Coº: ";
-"Recycler: " = "Coº: ";
-"Recycler" = "Coº";
-"the Recycler" = "Coºul";
-"\nto the Recycler" = "\nîn coº";
-"Move from the Recycler " = "Mut din coº ";
-"In" = "În";
-"Empty Recycler" = "Goleºte Coºul";
-"Empty the Recycler?" = "Golesc Coºul?";
+"Recycle: " = "CoÂº: ";
+"Recycler: " = "CoÂº: ";
+"Recycler" = "CoÂº";
+"the Recycler" = "CoÂºul";
+"\nto the Recycler" = "\nÃ®n coÂº";
+"Move from the Recycler " = "Mut din coÂº ";
+"In" = "ÃŽn";
+"Empty Recycler" = "GoleÂºte CoÂºul";
+"Empty the Recycler?" = "Golesc CoÂºul?";
 "Put Away" = "Pune la loc";
